@@ -60,7 +60,7 @@ a.about_data.quality	{border-left:1px solid #b4b4b4; text-align:right; padding-r
 .default				{width:960px; margin:0 auto; padding:0;}
 .default.head			{padding-top:20px;}
 .default.min			{padding-top:10px;}
-.default.declare		{padding:10px 0; font-size:0.9em; color:#ccc;}
+.default.declare		{padding:10px 0; font-size:0.9em; color:#fff;}
 .default.graph			{padding:40px 0;}
 .default.about			{padding:10px 0; text-align:right;}
 .default.data			{padding:20px 0 40px 0;}
