@@ -13,6 +13,12 @@
 #alert_no_iati_tip_text
 此捐助不发布到IATI呢。
 
+#alert_quality_text
+含“0”细胞是质量差的指示IATI报告。
+
+#alert_quality_tip_text
+含“0”细胞是质量差的指示IATI报告。
+
 #active_icon_alt_text
 活跃的项目图标
 
