@@ -13,6 +13,12 @@ This donor does not publish to IATI yet.
 #alert_no_iati_tip_text
 This donor does not publish to IATI yet.
 
+#alert_quality_text
+Cells containing "0" are an indication of poor quality reporting to IATI.
+
+#alert_quality_tip_text
+Cells containing "0" are an indication of poor quality reporting to IATI.
+
 #active_icon_alt_text
 Active projects icon
 
