@@ -13,6 +13,12 @@ Cette donateurs ne publie pas de IATI.
 #alert_no_iati_tip_text
 Cette donateurs ne publie pas de IATI.
 
+#alert_quality_text
+Les cellules contenant "0" sont une indication de mauvaise qualité des rapports à l'IATI.
+
+#alert_quality_tip_text
+Les cellules contenant "0" sont une indication de mauvaise qualité des rapports à l'IATI.
+
 #active_icon_alt_text 
 Projets actifs icône 
 
