@@ -157,6 +157,14 @@
 	<td colspan="3" class="alert_no_iati" title="{alert_no_iati_tip_text}">{alert_no_iati_text}</td>
 </tr>
 
+#alerts_quality
+{alert_no_data}
+
+#alert_no_data
+<tr>
+	<td colspan="3" class="alert_no_iati" title="{alert_quality_tip_text}">{alert_quality_text}</td>
+</tr>
+
 #table_declare
 <div class="default declare">
 	{table_declare_text}
