@@ -13,6 +13,12 @@
 #alert_no_iati_tip_text
 इस दाता अभी तक IATI को प्रकाशित नहीं करता है.
 
+#alert_quality_text
+"0" युक्त कोशिकाओं IATI के लिए रिपोर्टिंग खराब गुणवत्ता का एक संकेत कर रहे हैं.
+
+#alert_quality_tip_text
+"0" युक्त कोशिकाओं IATI के लिए रिपोर्टिंग खराब गुणवत्ता का एक संकेत कर रहे हैं.
+
 #active_icon_alt_text
 सक्रिय परियोजनाओं आइकन
 
