@@ -13,6 +13,12 @@
 #alert_no_iati_tip_text
 このドナーはまだIATIに公開されません。
 
+#alert_quality_text
+"0"を含む細胞はIATIへの報告低品質の指標である。
+
+#alert_quality_tip_text
+"0"を含む細胞はIATIへの報告低品質の指標である。
+
 #active_icon_alt_text
 アクティブなプロジェクトのアイコン
 
