@@ -13,6 +13,12 @@ Esta Donantes no publica a IATI.
 #alert_no_iati_tip_text
 Esta Donantes no publica a IATI.
 
+#alert_quality_text
+Las células que contienen "0" son una indicación de la mala calidad de informes a la IATI.
+
+#alert_quality_tip_text
+Las células que contienen "0" son una indicación de la mala calidad de informes a la IATI.
+
 #active_icon_alt_text
 Proyectos activos icono
 
