@@ -19,7 +19,8 @@
 	<div class="table_wrap">
 		<table class="activity">
 			{alerts}
-			{donor_stuff}
+			{table_header_amount}
+			{donor_activities_datas}
 		</table>
 	</div>
 	<div class="center_wrap">
@@ -38,10 +39,6 @@
 		<a href="#view=data_quality" class="read">{read_more_text}</a>
 	</div>
 </div>
-
-#donor_stuff
-{table_header_amount}
-{donor_activities_datas}
 
 #donor_activities_data
 <tr>
