@@ -9,6 +9,7 @@ Fixed translations accordingly
 Fixed hover states including translations
 Fixed missing hover state for sector title in table
 Fixed hover titles for CRS to reflect footer
+Added description when "data is missing" for table links
 
 
 Development Portal (2014-07-23 shi)
